chala sabr yetmadi

--- a/index.html
+++ b/index.html
@@ -3,7 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./scss/tyle.css" />
     <title>Dashboard</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/photo_2023-11-03_01-27-44.jpg"
+    />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <nav class="sidebar">
+      <header>
+        <div class="image-text">
+          <span class="image">
+            <img src="./images/photo_2023-11-03_01-27-44.jpg" alt="Logo" />
+          </span>
+          <div class="text header-text">
+            <span class="name"> CodingLab</span>
+            <span class="pro">WEb developer</span>
+          </div>
+        </div>
+        <i class="bx bx-chevron-right toggle"></i>
+      </header>
+      <div class="menu-bar">
+        <li class="nav-link">
+          <i class="bx bx-search icon"></i>
+          <input type="search" name="" id="" placeholder="Search..." />
+        </li>
+        <ul class="menu-link">
+          <li class="nav-link">
+            <a href="#">
+              <i class="bx bx-home-alt icon"></i>
+              <span class="text nav-text">Dashboard</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </body>
 </html>
